# graph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  catalog.in.yml  catalog.json  setup.cfg  upload.sh  workflow.tmpl
.github/workflows/: build-docker.yml  europepmc.yml  pubmed.yml  ukcdr_covid_tracker.yml
common/: catalog.py
datasets/de_eurosfueraerzte/: Makefile  catalog.py  metadata.yml
datasets/eu_eurosfordocs/: Makefile  metadata.yml  parse.py
datasets/europepmc/: metadata.yml  parse.py
datasets/pubmed/: Makefile  metadata.yml  parse.py
datasets/uk_disclosure/: Makefile  metadata.yml  parse.py
datasets/ukcdr_covid_tracker/: Makefile  metadata.yml  parse.py
datasets/us_cms_openpayments/: Makefile  metadata.yml  parse.py
