[metadata]
name = ftg-graph-etl
url = https://gitlab.com/follow-the-grant/ftg-graph
license = MIT

[options]
packages = find:
install_requires:
    dateparser
    fingerprints
    ftm-geocode
    followthemoney @ git+https://github.com/simonwoerpel/followthemoney.git@schema/science-identifiers  # noqa
    nomenklatura>=2.7.5
    openpyxl<3.1.2
    pandas
    psycopg2-binary
    pyicu
    zavod>=0.5.0
    awscli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

